--- a/config.yaml
+++ b/config.yaml
@@ -38,8 +38,8 @@ preprocessing:
 
   seed: 42
   n_val: 200
-  language: 'pt-br'
-  cleaner_name: 'no_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
+  language: 'en-us'
+  cleaner_name: 'english_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
   use_phonemes: True                 # whether to phonemize the text
                                      # if set to False, you have to provide the phonemized text yourself
   min_text_len: 2
